# rust-tokenizers

main/: Cargo.toml
main/src/preprocessing/tokenizer/: albert_tokenizer.rs  base_tokenizer.rs  bert_tokenizer.rs  ctrl_tokenizer.rs  gpt2_tokenizer.rs  marian_tokenizer.rs  roberta_tokenizer.rs  sentence_piece_tokenizer.rs  t5_tokenizer.rs  xlm_roberta_tokenizer.rs  xlnet_tokenizer.rs
main/src/preprocessing/vocab/: albert_vocab.rs  base_vocab.rs  bert_vocab.rs  bpe_vocab.rs  gpt2_vocab.rs  marian_vocab.rs  openai_gpt_vocab.rs  roberta_vocab.rs  sentence_piece_vocab.rs  t5_vocab.rs  xlm_roberta_vocab.rs  xlnet_vocab.rs
main/src/preprocessing/vocab/sentencepiece_proto/: sentencepiece_model.rs
